# cnnef

./: .travis.yml  CMakeCache.txt  CMakeLists.txt  README.md
conda-recipe/: README  build.sh  meta.yaml
docsrc/cpp/: Doxyfile.in
docsrc/cpp/include/: mainpage.dox
docsrc/python/: CMakeLists.txt  conf.py.in  conf.py.inold  index.rst  nifty.rst
include/cnnef/: cnnef.hxx
include/cnnef/cgp2d/cells/: cell0.hxx  cell1.hxx  cell2.hxx
include/cnnef/marray/: marray.hxx  marray_hdf5.hxx
include/cnnef/python/: converter.hxx
include/cnnef/tools/: runtime_check.hxx
sandbox/: learn_edge_weights.py
src/: CMakeLists.txt
src/examples/: examples_common.hxx
src/examples/graph/: undirected_list_graph.cxx
src/examples/graph/multicut/: multicut.cxx
src/python/module/cnnef/: __init__.py
src/python/module/cnnef/core/: __init__.py
src/python/test/: CMakeLists.txt  test_python.py
src/test/: CMakeLists.txt  test_marray.cxx
